--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,7 +6,10 @@ $flower-thumbnail-height: 350px;
 $flower-thumbnail-width-xs: 185px;
 $flower-thumbnail-height-xs: 230px;
 
-$button-gradient: linear-gradient(270deg, #ECBCB3 0%, #EAA79E 100%);
+$box-background-primary: #F9F9F9;
+
+// $button-gradient: linear-gradient(270deg, #ECBCB3 0%, #EAA79E 100%);
+$button-gradient: linear-gradient(270deg, #377D5C 0%, #377D5C 100%);
 $button-primary: #DF9186;
 $color-secondary: #949EA0;
 $color-gray: #334144;
