--- a/src/index.scss
+++ b/src/index.scss
@@ -3,11 +3,13 @@ body {
 	// font-family: 'Montserrat', sans-serif;
 	display: flex;
 	min-height: 100vh;
+	background-image: url('images/testBackground.jpg');
+	background-position: center;
 }
 
 #root {
-	width: 100%;
+	width: 90%;
 	height: 100vh;
-	max-width: 1220px;
+	// max-width: 1220px;
 	margin: 0 auto;
 }
