--- a/src/components/signup/SignUp.scss
+++ b/src/components/signup/SignUp.scss
@@ -1,6 +1,6 @@
 @import '../../styles/variables.scss';
 
-.st-Login {
+.st-SignUp {
 	display: flex !important;
 	align-items: center;
 	justify-content: center;
