--- a/src/components/widgets/input/FloatingInput.scss
+++ b/src/components/widgets/input/FloatingInput.scss
@@ -17,7 +17,7 @@
 	input {
 		background: #F5F6F7 !important;
 		border: 1px solid #DFE5EA;
-		color: $color-gray;
+		color: $gray;
 		box-sizing: border-box;
 		border-radius: 3px;
 		min-height: 50px;
