--- a/src/components/widgets/input/FloatingInput.scss
+++ b/src/components/widgets/input/FloatingInput.scss
@@ -9,24 +9,10 @@
 		display: block;
 	}
 
-	label, input {
+	label,
+	input {
 		transition: all 0.2s;
 		touch-action: manipulation;
-	}
-
-	input {
-		background: #F5F6F7 !important;
-		border: 1px solid #DFE5EA;
-		color: $gray;
-		box-sizing: border-box;
-		border-radius: 3px;
-		min-height: 50px;
-		font-size: 13px;
-	}
-
-	input:focus {
-		outline: 0;
-		border-bottom: 1px solid #666;
 	}
 
 	label {
@@ -35,29 +21,45 @@
 		margin-bottom: 0;
 	}
 
-	input:placeholder-shown + label {
-		cursor: text;
-		max-width: 66.66%;
-		white-space: nowrap;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		transform-origin: left bottom;
-		transform: translate(12px, 40px);
+	input {
+		background: #f5f6f7 !important;
+		border: 1px solid #dfe5ea;
+		color: $gray;
+		box-sizing: border-box;
+		border-radius: 3px;
+		min-height: 50px;
+		font-size: 14px;
+
+		&:focus {
+			outline: 0;
+			border-bottom: 1px solid #666;
+		}
+
+		&:placeholder-shown + label {
+			cursor: text;
+			font-size: 10px;
+			// max-width: 66.66%;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			transform-origin: left bottom;
+			transform: translate(12px, 34px);
+		}
+
+		&:not(:placeholder-shown) + label,
+		input:focus + label {
+			font-size: 10px;
+			transform: translate(12px, 19px);
+			cursor: pointer;
+		}
 	}
 
-	::-webkit-input-placeholder {
-		opacity: 0;
-		transition: inherit;
-	}
+	// ::-webkit-input-placeholder {
+	// 	opacity: 0;
+	// 	transition: inherit;
+	// }
 
-	input:focus::-webkit-input-placeholder {
-		opacity: 1;
-	}
-
-	input:not(:placeholder-shown) + label,
-	input:focus + label {
-		font-size: 10px;
-		transform: translate(12px, 19px);
-		cursor: pointer;
-	}
+	// input:focus::-webkit-input-placeholder {
+	// 	opacity: 1;
+	// }
 }
