--- a/src/components/stories/StoryItem.scss
+++ b/src/components/stories/StoryItem.scss
@@ -8,10 +8,27 @@
 	border: 1px solid $gray-lighter;
 	display: flex;
 	flex-direction: column;
+	color: #000 !important;
 
 	&-cover {
 		position: relative;
 		height: 250px;
+		cursor: pointer;
+
+		&:hover {
+			&:before {
+				content: '';
+				background: #000;
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				opacity: 0.5;
+			}
+
+			.st-StoryItem-cover-categories, .st-StoryItem-cover-author {
+				visibility: visible;
+			}
+		}
 
 		.st-Image {
 			width: 100%;
@@ -24,11 +41,14 @@
 		}
 
 		&-categories {
+			visibility: hidden;
 			position: absolute;
+			z-index: 2;
 			top: 0;
 			font-size: 14px;
 			font-style: italic;
-			background: rgba(255, 255, 255, 0.5);
+			color: #fff;
+			// background: rgba(255, 255, 255, 0.5);
 			width: 100%;
 			padding: 5px;
 
@@ -38,10 +58,13 @@
 		}
 
 		&-author {
+			visibility: hidden;
 			position: absolute;
+			z-index: 2;
 			bottom: 0;
 			font-size: 14px;
-			background: rgba(255, 255, 255, 0.5);
+			color: #fff;
+			// background: rgba(255, 255, 255, 0.5);
 			width: 100%;
 			padding: 5px;
 		}
