--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,8 +8,8 @@ $flower-thumbnail-height-xs: 230px;
 
 $box-background-primary: #F9F9F9;
 
-$color-primary: #377d5c;
-$color-secondary: #6d6d6d;
+$color-primary: #055425;
+$color-secondary: #5b5b5b;
 $gray: #9fabad;
 $gray-lighter: lighten($gray, 20%);
 $gray-darker: darken($gray, 20%);
