--- a/src/components/stories/NewStory.scss
+++ b/src/components/stories/NewStory.scss
@@ -1,9 +1,37 @@
+@import '../../styles/variables.scss';
+
 .st-NewStory {
+	background: $box-background-primary;
+	padding: 20px;
+	margin: 40px 0;
+
+	.st-Uploader {
+		margin-top: 20px;
+	}
+
+	&-title {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		.st-FloatingInput {
+			margin-right: 15px;
+			margin-bottom: 0;
+		}
+	}
+
+	&-uploader {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
 	&-editor {
 		margin: 20px 0;
 	}
 
 	&-button {
+		margin-top: 20px;
 		display: flex;
 		justify-content: flex-end;
 	}
