--- a/src/components/stories/Stories.scss
+++ b/src/components/stories/Stories.scss
@@ -15,6 +15,18 @@
 
 	&-lastest {
 		display: flex;
-		flex-wrap: wrap;
+		flex-flow: row wrap;
+		// justify-content: space-between;
+
+		// &:after {
+		// 	content: '';
+		// 	flex: auto;
+		// }
+	}
+
+	&-pagination {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 }
