--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,11 @@
 body {
 	display: flex;
 	min-height: 100vh;
-	background: url('images/testBackground.jpg') center center no-repeat;
+	background-image: url('images/testBackground.jpg');
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 #root {
