--- a/src/components/stories/StoryItem.scss
+++ b/src/components/stories/StoryItem.scss
@@ -77,6 +77,7 @@
 		padding: 10px;
 		border-top: 1px solid $gray-lighter;
 		border-bottom: 1px solid $gray-lighter;
+		flex-grow: 1;
 	}
 
 	&-footer {
