--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -3,5 +3,10 @@
 $primary: $color-primary;
 $secondary: $color-secondary;
 
-
 @import '~bootstrap/scss/bootstrap.scss';
+
+.form-control {
+	&:focus {
+		border-color: $color-primary;
+	}
+}
