--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -2,7 +2,7 @@
 
 .st-Nav {
 	width: 100%;
-	height: 60px;
+	min-height: 60px;
 	margin-top: 25px;
 	background-color: $box-background-primary;
 	border: 1px solid rgba(0, 0, 0, 0.15);
@@ -10,13 +10,16 @@
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 3px;
 
-	@media (max-width: $tablet-width) {
-		display: none;
-	}
-
 	.navbar {
 		height: 100%;
 		align-content: center;
+
+		@media (max-width: $tablet-width) {
+			display: flex;
+			flex-direction: column;
+			padding: 0;
+			flex-wrap: nowrap;
+		}
 
 		&-brand {
 			justify-content: center;
