--- a/src/components/stories/Stories.scss
+++ b/src/components/stories/Stories.scss
@@ -12,11 +12,23 @@
 		display: flex;
 		justify-content: space-between;
 		padding: 0 20px;
+
+		@media (max-width: $tablet-width) {
+			flex-direction: column-reverse;
+
+			.st-Input {
+				min-width: unset;
+			}
+		}
 	}
 
 	&-lastest {
 		display: flex;
 		flex-flow: row wrap;
+
+		@media (max-width: $tablet-width) {
+			justify-content: center;
+		}
 
 		h2 {
 			padding: 0 20px;
