--- a/src/components/widgets/uploader/Uploader.scss
+++ b/src/components/widgets/uploader/Uploader.scss
@@ -9,6 +9,10 @@
 	justify-content: space-between;
 	width: 400px;
 
+	@media (max-width: $tablet-width) {
+		width: auto;
+	}
+
 	&-dropzone {
 		display: flex;
 		justify-content: flex-end;
