--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -2,7 +2,7 @@
 
 .st-Nav {
 	width: 100%;
-	min-height: 60px;
+	height: 60px;
 	margin-top: 25px;
 	background-color: $box-background-primary;
 	border: 1px solid rgba(0, 0, 0, 0.15);
@@ -41,6 +41,7 @@
 
 		.nav {
 			align-items: center;
+			flex-wrap: nowrap;
 		}
 	}
 
