[Writter]: fixed autosave

--- a/src/components/stories/widgets/StoryDropdownButton.scss
+++ b/src/components/stories/widgets/StoryDropdownButton.scss
@@ -5,5 +5,13 @@
 		> button {
 			box-shadow: none !important;
 		}
+
+		.dropdown {
+			&-item {
+				&:last-child {
+					color: $color-secondary-red;
+				}
+			}
+		}
 	}
 }
