--- a/src/components/widgets/button/IconButton.scss
+++ b/src/components/widgets/button/IconButton.scss
@@ -32,13 +32,13 @@
 		&:hover {
 			color: #000;
 			border-radius: 2px;
-			background: $gray;
+			background: $color-grey-medium;
 		}
 
 		&:active:focus {
 			color: #000;
 			border-radius: 2px;
-			background: $gray;
+			background: $color-grey-medium;
 		}
 
 		&:focus {
