--- a/src/components/widgets/loader/Loader.scss
+++ b/src/components/widgets/loader/Loader.scss
@@ -27,7 +27,7 @@
 	}
 
 	> .fa {
-		color: $gray;
+		color: $color-grey-lighter;
 		display: flex;
 		justify-content: center;
 		align-items: center;
