--- a/src/components/stories/Story.scss
+++ b/src/components/stories/Story.scss
@@ -4,13 +4,26 @@
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	max-width: 640px;
+	align-items: center;
+	max-width: $story-preview-width-large;
 	margin: 0 auto;
 
 	.st-StoryItem {
-		width: 640px;
+		width: $story-preview-width-large;
 		border: none;
 		box-shadow: none;
+
+		@media (max-width: $breakpoint-sm) {
+			width: $story-preview-width-small;
+		}
+
+		&-cover {
+			height: 384px;
+
+			.st-Image {
+				border-radius: 12px;
+			}
+		}
 
 		&-author,
 		&-description,
@@ -49,6 +62,10 @@
 					min-width: 90px;
 					min-height: 40px;
 
+					&:focus {
+						box-shadow: none;
+					}
+
 					&:first-child,
 					&:last-child {
 						min-width: unset;
@@ -66,12 +83,17 @@
 		}
 	}
 
+	&-pages {
+		margin-bottom: 20px;
+		color: $color-grey-light;
+	}
+
 	.fullscreen {
 		background: #fff;
 		padding: 20px;
 		overflow: auto;
 
-		@media (max-width: $tablet-width) {
+		@media (max-width: $breakpoint-m) {
 			padding: 10px;
 		}
 	}
