--- a/src/components/stories/StoryItem.scss
+++ b/src/components/stories/StoryItem.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .st-StoryItem {
-	width: $story-preview-width-desktop;
+	width: $story-preview-width-medium;
 	min-height: $story-preview-height;
 	background: #fff;
 	margin: 12px 0 0;
@@ -24,14 +24,21 @@
 		margin-bottom: 12px;
 	}
 
-	@media (max-width: $tablet-width) {
-		width: $story-preview-width-mobile;
+	@media (max-width: $breakpoint-sm) {
+		width: $story-preview-width-small;
 	}
 
 	&-author {
 		display: flex;
 		align-items: center;
 		padding: 15px;
+
+		.st-UserAvatar {
+			.st-Image,
+			.badge {
+				margin-right: 16px;
+			}
+		}
 
 		&-info {
 			display: flex;
@@ -50,6 +57,7 @@
 	}
 
 	&-description {
+		word-break: break-word;
 		// min-height: 70px;
 		padding: 0 15px 15px;
 		// flex-grow: 1;
@@ -174,6 +182,7 @@
 		&-posted {
 			max-height: 500px;
 			overflow: auto;
+			word-break: break-word;
 
 			&-item {
 				display: flex;
