--- a/src/components/stories/writter/StoryWritter.scss
+++ b/src/components/stories/writter/StoryWritter.scss
@@ -1,8 +1,14 @@
 @import '../../../styles/variables.scss';
 
-.st-Writter {
+.st-StoryWritter {
+	display: flex;
+	flex-direction: column;
 	max-width: 640px;
 	margin: 0 auto;
+
+	@media (max-width: $breakpoint-sm) {
+		padding: 10px;
+	}
 
 	&-header {
 		.st-FloatingInput {
@@ -39,6 +45,11 @@
 						color: $color-grey-black;
 					}
 					color: $color-secondary-red;
+
+					&:disabled {
+						color: $color-grey-lighter;
+						cursor: not-allowed;
+					}
 				}
 			}
 		}
@@ -47,6 +58,29 @@
 			display: flex;
 			justify-content: space-between;
 			margin-bottom: 20px;
+
+			@media (max-width: $breakpoint-sm) {
+				flex-direction: column;
+				align-items: center;
+			}
+
+			&-actions {
+				display: flex;
+
+				@media (max-width: $breakpoint-sm) {
+					margin-bottom: 16px;
+					justify-content: center;
+				}
+
+				.st-StoryPagePicker,
+				.st-IconButton {
+					margin-right: 16px;
+				}
+
+				&-buttons {
+					display: flex;
+				}
+			}
 		}
 
 		&-previewModal {
@@ -70,12 +104,16 @@
 		}
 	}
 
-	.st-TextEditor {
-		margin-bottom: 200px;
+	&-writter {
+		padding-bottom: 200px;
 
-		.public-DraftEditorPlaceholder-inner {
-			font-size: 16px;
-			color: $color-grey-lighter;
+		&-editor {
+			.st-TextEditor {
+				.public-DraftEditorPlaceholder-inner {
+					font-size: 16px;
+					color: $color-grey-lighter;
+				}
+			}
 		}
 	}
 }
