--- a/src/components/widgets/image/Image.scss
+++ b/src/components/widgets/image/Image.scss
@@ -7,7 +7,7 @@
 		align-items: center;
 		justify-content: center;
 		background-color: transparent;
-		border: 1px solid $gray-lighter;
+		border: 1px solid $color-grey-border;
 		width: 100%;
 		height: 100%;
 
