[story_pages]: after delete page redirect fix

--- a/src/components/stories/StoryItem.scss
+++ b/src/components/stories/StoryItem.scss
@@ -158,6 +158,15 @@
 		}
 	}
 
+	&-likes,
+	&-comments {
+		.st-UserAvatar {
+			.st-Image {
+				margin-right: 16px;
+			}
+		}
+	}
+
 	&-likes {
 		display: flex;
 		flex-direction: column;
