working on issues with pagination, added loadmore, added filter in stories

--- a/src/components/stories/writter/StoryWritter.scss
+++ b/src/components/stories/writter/StoryWritter.scss
@@ -35,7 +35,7 @@
 
 		.st-DropdownButton {
 			> button {
-				background: $color-primary-light;
+				// background: $color-primary-light;
 				box-shadow: $box-shadow-light;
 			}
 
