--- a/src/components/widgets/pickers/story/StoryPicker.scss
+++ b/src/components/widgets/pickers/story/StoryPicker.scss
@@ -32,7 +32,8 @@
 			font-size: 14px;
 		}
 
-		.st-Image {
+		.st-Image,
+		.st-Image-fallback {
 			width: 48px;
 			height: 36px;
 			margin-right: 12px;
