--- a/src/components/stories/StoryThumb.scss
+++ b/src/components/stories/StoryThumb.scss
@@ -7,6 +7,7 @@
 	border-radius: 6px;
 	margin: 8px 0;
 	min-height: 120px;
+	max-height: 200px;
 	min-width: $story-preview-width-small;
 	max-width: $story-preview-width-medium;
 	cursor: pointer;
@@ -28,7 +29,7 @@
 
 			&-fallback {
 				width: 120px;
-				border: none;
+				// border: none;
 			}
 		}
 	}
@@ -45,6 +46,8 @@
 			display: flex;
 			flex-direction: column;
 			word-break: break-word;
+			max-height: 100px;
+			overflow: hidden;
 
 			> span {
 				color: $color-grey-medium;
