added loadmore wrapper

--- a/src/components/stories/StoryThumb.scss
+++ b/src/components/stories/StoryThumb.scss
@@ -6,8 +6,7 @@
 	border: 1px solid $color-grey-border;
 	border-radius: 6px;
 	margin: 8px 0;
-	min-height: 132px;
-	max-height: 200px;
+	height: 144px;
 	min-width: $story-preview-width-small;
 	max-width: $story-preview-width-medium;
 	cursor: pointer;
