--- a/src/components/stories/StoryItem.scss
+++ b/src/components/stories/StoryItem.scss
@@ -72,7 +72,9 @@
 			object-fit: cover;
 
 			&-fallback {
-				border: none;
+				border-left: none;
+				border-right: none;
+				font-size: 24px;
 			}
 		}
 	}
@@ -161,7 +163,8 @@
 	&-likes,
 	&-comments {
 		.st-UserAvatar {
-			.st-Image, .badge {
+			.st-Image,
+			.badge {
 				margin-right: 16px;
 			}
 		}
