--- a/src/components/stories/StoryTabs.scss
+++ b/src/components/stories/StoryTabs.scss
@@ -4,96 +4,101 @@
 	display: flex;
 	flex-direction: column;
 
-	.nav {
-		margin-bottom: 18px;
-	}
+	&-tabs {
+		position: sticky;
+		top: 10px;
 
-	.nav-link {
-		color: $color-grey-light;
-		font-weight: 600;
-		cursor: pointer;
-		font-size: 14px;
-		padding: 0 15px 0 0;
-
-		&:hover {
-			color: $color-secondary-black;
+		.nav {
+			margin-bottom: 18px;
 		}
 
-		&.active {
-			color: $color-secondary-black;
-		}
-	}
+		.nav-link {
+			color: $color-grey-light;
+			font-weight: 600;
+			cursor: pointer;
+			font-size: 14px;
+			padding: 0 15px 0 0;
 
-	.st-SavedStories,
-	.st-DraftStories,
-	.st-MyStories {
-		> span {
-			display: none;
-		}
-
-		.st-StoryThumb {
-			min-height: unset;
-			padding: 10px 5px;
-			margin: 0;
-			height: auto;
-			border: none;
-
-			&:hover,
-			&:active {
-				background: $color-primary-light;
+			&:hover {
+				color: $color-secondary-black;
 			}
 
-			&-cover {
-				.st-Image {
-					width: 48px;
-					height: 36px;
-					margin-right: 12px;
-					border-radius: 4px;
-					object-fit: cover;
+			&.active {
+				color: $color-secondary-black;
+			}
+		}
 
-					&-fallback {
+		.st-SavedStories,
+		.st-DraftStories,
+		.st-MyStories {
+			> span {
+				display: none;
+			}
+
+			.st-StoryThumb {
+				min-height: unset;
+				padding: 10px 5px;
+				margin: 0;
+				height: auto;
+				border: none;
+
+				&:hover,
+				&:active {
+					background: $color-primary-light;
+				}
+
+				&-cover {
+					.st-Image {
 						width: 48px;
 						height: 36px;
 						margin-right: 12px;
 						border-radius: 4px;
 						object-fit: cover;
-					}
-				}
-			}
 
-			&-details {
-				padding: 0;
-				justify-content: center;
-
-				&-description {
-					> span {
-						&:first-child {
-							font-family: $font-merriweather;
-							color: $color-grey-medium;
-							font-weight: bold;
-							font-size: 14px;
-						}
-
-						&:last-child {
-							display: none;
+						&-fallback {
+							width: 48px;
+							height: 36px;
+							margin-right: 12px;
+							border-radius: 4px;
+							object-fit: cover;
 						}
 					}
 				}
 
-				&-created {
-					display: none;
+				&-details {
+					padding: 0;
+					justify-content: center;
+
+					&-description {
+						> span {
+							&:first-child {
+								font-family: $font-merriweather;
+								color: $color-grey-medium;
+								font-weight: bold;
+								font-size: 14px;
+							}
+
+							&:last-child {
+								display: none;
+							}
+						}
+					}
+
+					&-created {
+						display: none;
+					}
 				}
+			}
+
+			&-pagination {
+				display: none;
 			}
 		}
 
-		&-pagination {
-			display: none;
-		}
-	}
-
-	> a {
-		&:last-child {
-			text-align: center;
+		> a {
+			&:last-child {
+				text-align: center;
+			}
 		}
 	}
 }
