--- a/src/components/stories/StoryTabs.scss
+++ b/src/components/stories/StoryTabs.scss
@@ -6,10 +6,10 @@
 
 	&-tabs {
 		position: sticky;
-		top: 10px;
+		top: 80px;
 
 		.nav {
-			margin-bottom: 18px;
+			margin-bottom: 12px;
 		}
 
 		.nav-link {
@@ -17,7 +17,8 @@
 			font-weight: 600;
 			cursor: pointer;
 			font-size: 14px;
-			padding: 0 15px 0 0;
+			padding: 0;
+			margin-right: 15px;
 
 			&:hover {
 				color: $color-secondary-black;
@@ -25,6 +26,7 @@
 
 			&.active {
 				color: $color-secondary-black;
+				border-bottom: 4px dotted $color-primary;
 			}
 		}
 
