--- a/src/components/stories/widgets/Categories.scss
+++ b/src/components/stories/widgets/Categories.scss
@@ -4,7 +4,15 @@
 	width: 100%;
 	display: flex;
 	flex-wrap: nowrap !important;
-	overflow: auto;
+	flex-direction: column;
+	position: sticky;
+	top: 80px;
+
+	> span {
+		font-size: 14px;
+		color: $color-grey-light;
+		font-weight: 600;
+	}
 
 	.nav-link {
 		color: $color-grey-light;
