--- a/src/components/user/UserProfile.scss
+++ b/src/components/user/UserProfile.scss
@@ -8,13 +8,16 @@
 	&-user {
 		width: 100%;
 		display: flex;
-		align-items: center;
 		margin-bottom: 36px;
 		min-height: 150px;
 		max-width: $story-preview-width-medium;
 
 		@media (max-width: $breakpoint-sm) {
 			max-width: $story-preview-width-small;
+		}
+
+		.st-Loader {
+			justify-content: center;
 		}
 
 		&-info {
